spelling and minor style changes

--- a/resume.tex
+++ b/resume.tex
@@ -29,7 +29,7 @@
 
 
 \namesection{Matthew}{Blizzard}{Brown}{
-  \href{mailto:mbb70@case.edu}{mbb70@case.edu} | 925.876.6106
+  \href{mailto:mbb70@case.edu}{mbb70@case.edu} | (925) 877-6106
 }
 
 \begin{minipage}[t]{0.49\textwidth}
@@ -60,7 +60,7 @@
 \begin{spacing}{1.5}
 Data Structures \textbullet{} Compiler Design \\
 Signal Processing \textbullet{} Operating Systems \\
-Stochastic Modelling \textbullet{} Computational Statistics \\
+Stochastic Modeling \textbullet{} Computational Statistics \\
 Introduction to Artificial Intelligence \textbullet{} Algorithms \\
 \end{spacing}
 \end{minipage}
@@ -69,7 +69,7 @@ Introduction to Artificial Intelligence \textbullet{} Algorithms \\
 %     SKILLS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\vspace{-15pt}
+\vspace{-20pt}
 \section{Skills}
 \runsubsection{Programming Languages} \descript{}
 \vspace{1pt}
@@ -79,7 +79,7 @@ Javascript \textbullet{} CoffeeScript \textbullet{} HTML \textbullet{} CSS \text
 
 \runsubsection{Technologies, Frameworks, and Libraries} \descript{}
 \vspace{1pt}
-MapReduce/HDFS \textbullet{} Hive/Imapala \textbullet{} Cassandra \textbullet{} Spark \textbullet{} MongoDB \textbullet{} ElasticSearch \\
+Spark \textbullet{} MapReduce/HDFS \textbullet{} Cassandra \textbullet{} Hive/Impala \textbullet{} MongoDB \textbullet{} ElasticSearch \\
 Knockoutjs \textbullet{} React/Redux \textbullet{} jQuery \textbullet{} d3 \textbullet{} Sinatra \textbullet{} BLAS/LAPACK \textbullet{} Numpy/Scipy/Pandas
 \sectionsep
 
@@ -87,6 +87,7 @@ Knockoutjs \textbullet{} React/Redux \textbullet{} jQuery \textbullet{} d3 \text
 %     EXPERIENCE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\vspace{-5pt}
 \section{Experience}
 
 \runsubsection{Boston Health Economics}
@@ -94,11 +95,12 @@ Knockoutjs \textbullet{} React/Redux \textbullet{} jQuery \textbullet{} d3 \text
 \descript{Full Stack Software Engineer}
 \location{ June 2015 – Current | Boston, MA }
 \begin{tightemize}
-\item Day to day running of Instant Health Data, a healthcare analytics web application sitting in front of a large (60+ node/100TB+) baremetal HDFS/Spark/Cassandra cluster
-\item Developed ETLs to load terabytes of healthcare data from various sources into Cassandra
-\item Created real time full stack monitoring solution for distributed application combining server status/load, Spark logs, REST APIs, application database queries and webserver logs
-\item Extended/maintained existing SPA framework written in Knockoutjs and designed visualizations for analyzing longitudinal patient data in React and d3
-\item Created functionality to generate Word and Excel reports describing a user's project including the complete specification and results
+\item Manage Instant Health Data (IHD), a health care analytics web application on top of a large bare-metal HDFS/Spark/Cassandra cluster
+\item Wrote and ran ETLs to load terabytes of health care SQL databases into IHD
+\item Created real time full stack monitoring for IHD combining server load, REST APIs, application database queries and webserver logs
+\item Extended existing front end framework written in Knockoutjs, JQuery and Bootstrap
+\item Designed visualizations for analyzing longitudinal patient data in React and d3
+\item Mentored junior members of the team on best practices and data structure/algorithm fundamentals
 \end{tightemize}
 \sectionsep
 
@@ -107,8 +109,8 @@ Knockoutjs \textbullet{} React/Redux \textbullet{} jQuery \textbullet{} d3 \text
 \descript{Software Validation Intern}
 \location{May 2014 – Aug 2014 | Akron, OH}
 \begin{tightemize}
-\item Helped write and maintain large test infrastructure written in Ruby and running on top of Jenkins
-\item Developed a Java plugin for CI tool Jenkins to dynamically assign tests to servers from an available server pool, improving testing parrallelism and efficiency dramatically
+\item Helped write and maintain large test infrastructure written in Ruby and running on top of CI Tool Jenkins
+\item Developed a Java plugin for Jenkins to dynamically assign tests to servers from an available server pool, improving testing parallelism and efficiency dramatically
 \item Extended and improved the reliability of the UI test suite written with Ruby Watir/Selenium WebDriver
 \end{tightemize}
 \sectionsep
@@ -129,8 +131,8 @@ Knockoutjs \textbullet{} React/Redux \textbullet{} jQuery \textbullet{} d3 \text
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Links}
-Github \href{https://github.com/mbb70}{https://github.com/mbb70} \\
-LinkedIn \href{https://www.linkedin.com/in/matthew-brown-25aa24b7}{https://www.linkedin.com/in/matthew-brown-25aa24b7}  \\
+Github: \href{https://github.com/mbb70}{https://github.com/mbb70} \\
+LinkedIn: \href{https://www.linkedin.com/in/matthew-brown-25aa24b7}{https://www.linkedin.com/in/matthew-brown-25aa24b7}  \\
 
 \vfill
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
