--- a/resume.tex
+++ b/resume.tex
@@ -29,7 +29,6 @@
 
 
 \namesection{Matthew}{Blizzard}{Brown}{
-  \href{mailto:mbb70@case.edu}{mbb70@case.edu} | (925) 877-6106
 }
 
 \begin{minipage}[t]{0.49\textwidth}
@@ -95,11 +94,13 @@ Knockoutjs \textbullet{} React/Redux \textbullet{} jQuery \textbullet{} d3 \text
 \descript{Full Stack Software Engineer}
 \location{ June 2015 – Current | Boston, MA }
 \begin{tightemize}
-\item Manage Instant Health Data (IHD), a health care analytics web application on top of a large bare-metal HDFS/Spark/Cassandra cluster
-\item Wrote and ran ETLs to load terabytes of health care SQL databases into IHD
-\item Created real time full stack monitoring for IHD combining server load, REST APIs, application database queries and webserver logs
-\item Extended existing front end framework written in Knockoutjs, JQuery and Bootstrap
+\item Managed Instant Health Data (IHD), a healthcare analytics web application on top of a large bare-metal HDFS/Spark/Cassandra cluster
+\item Wrote and ran ETLs to load terabytes of healthcare data into IHD with a mix of Spark, MapReduce and SQL
+\item Created real time full stack monitoring for IHD combining server status/load, REST APIs, application database queries and webserver logs
 \item Designed visualizations for analyzing longitudinal patient data in React and d3
+\item Worked with consultants to implement Propensity Score Matching in Spark using Scala, SparkML and raw RDDs
+%\item Extended existing front end framework written in Knockoutjs, JQuery and Bootstrap
+%\item Created functionality to generate Word and Excel reports etailing a client's analysis including the complete specification and all results
 \item Mentored junior members of the team on best practices and data structure/algorithm fundamentals
 \end{tightemize}
 \sectionsep
